<resources>
    <string name="app_name">Perty</string>
    <string name="facebook_app_id">840754492763222</string>
    <string name="fb_login_protocol_scheme">fb840754492763222</string>
    <string name="title_activity_grid_view_adapter">GridViewAdapter</string>
    <string name="title_activity_grid_item_view">GridItemView</string>
    <string name="title_activity_selected_items">SelectedItemsActivity</string>
    <string name="nav_feed">Events</string>
    <string name="nav_search">Explore</string>
    <string name="nav_create">Create</string>
    <string name="nav_exp">Notice</string>
    <string name="nav_profile">Profile</string>
    <string name="profile_fragment">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userHint">Come up with a cool username ;)</string>
    <string name="typeTitle">What type of user are you?</string>
    <string name="bioHint">Tell others something about you!</string>

    <string name="post_about">This\'ll work</string>

</resources>
