<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/nav_feed"
        />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/nav_exp"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/nav_exp" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/nav_profile" />
</menu>